Source/WebKit2/Shared/WebsiteData/WebsiteDataTypes.h
@@ -31,6 +31,7 @@ namespace WebKit {
 enum WebsiteDataTypes {
     WebsiteDataTypeCookies = 1 << 0,
     WebsiteDataTypeDiskCache = 1 << 1,
+    WebsiteDataTypeLocalStorage = 1 << 2,
 };
 
 };
