Source/WebKit2/UIProcess/Storage/LocalStorageDatabaseTracker.h
@@ -56,7 +56,7 @@ public:
     void deleteAllDatabases();
 
     // Returns a vector of the origins whose databases have been deleted.
-    Vector<RefPtr<WebCore::SecurityOrigin>> deleteDatabasesModifiedSince(time_t);
+    Vector<Ref<WebCore::SecurityOrigin>> deleteDatabasesModifiedSince(std::chrono::system_clock::time_point);
 
     Vector<RefPtr<WebCore::SecurityOrigin>> origins() const;
     Vector<LocalStorageDetails> details();
